
name:                awesomium
version:             0.1.0.0
synopsis:            High level Awesomium bindings.
license:             LGPL-3
license-file:        LICENSE
author:              Maksymilian Owsianny
maintainer:          Maksymilian.Owsianny@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:  Graphics.UI.Awesomium
  build-depends:    base ==4.5.*, yaml, text
  hs-source-dirs:   src
