
name:                awesomium
version:             0.1.0.0
synopsis:            High-level Awesomium bindings.
license:             LGPL-3
license-file:        LICENSE
author:              Maksymilian Owsianny
maintainer:          Maksymilian.Owsianny+Awesomium@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules: Graphics.UI.Awesomium
                 , Graphics.UI.Awesomium.WebCore
                 , Graphics.UI.Awesomium.WebView
                 , Graphics.UI.Awesomium.WebView.Callbacks
                 , Graphics.UI.Awesomium.RenderBuffer
                 , Graphics.UI.Awesomium.Resource
                 , Graphics.UI.Awesomium.UploadElement
                 , Graphics.UI.Awesomium.History
                 , Graphics.UI.Awesomium.Javascript
                 , Graphics.UI.Awesomium.Javascript.JSValue
                 , Graphics.UI.Awesomium.Javascript.JSObject
                 , Graphics.UI.Awesomium.Javascript.JSArray

  build-depends  : awesomium-raw
                 , base ==4.5.*, vector, text, containers
                 , aeson, attoparsec

  hs-source-dirs : src
